--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spoofy",
-  "description": "Easily spoof your MAC address on modern macOS",
-  "version": "1.0.0",
+  "description": "Cross-platform MAC address spoofing utility (work in progress)",
+  "version": "0.0.1",
   "bin": "./bin/cmd.js",
   "files": [
     "index.js",
