docs: Update README and package.json for npm publication
- Update package name to spoof-d to match GitHub repo
- Update README with npm installation instructions
- Add npm version badge
- Fix bin field in package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "spoofy",
+  "name": "spoof-d",
   "description": "Cross-platform MAC address spoofing utility for macOS, Windows, and Linux",
   "version": "0.1.0",
-  "bin": "./bin/cmd.js",
+  "bin": {
+    "spoofy": "./bin/cmd.js"
+  },
   "files": [
     "index.js",
     "bin/",
