feat: Add user experience improvements
- Add verbose mode (--verbose) for detailed debugging output
- Add JSON output option (--json) for scripting and automation
- Add progress indicators for long-running operations
- Add configuration file support (.spoofyrc)
- Update README with advanced usage examples
- Bump version to 0.2.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spoof-d",
   "description": "Cross-platform MAC address spoofing utility for macOS, Windows, and Linux",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "bin": {
     "spoofy": "./bin/cmd.js"
   },
@@ -9,7 +9,8 @@
     "index.js",
     "bin/",
     "LICENSE",
-    "README.md"
+    "README.md",
+    ".spoofyrc.example"
   ],
   "bugs": {
     "url": "https://github.com/TT5H/spoof-d/issues"
