--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "spoof-d",
   "description": "Cross-platform MAC address spoofing utility for macOS, Windows, and Linux",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "bin": {
-    "spoofy": "./bin/cmd.js"
+    "spoofy": "bin/cmd.js"
   },
   "files": [
     "index.js",
     "bin/",
+    "lib/",
     "LICENSE",
     "README.md",
-    ".spoofyrc.example"
+    ".spoofyrc.example",
+    "batch.example.json"
   ],
   "bugs": {
     "url": "https://github.com/TT5H/spoof-d/issues"
@@ -19,6 +21,7 @@
     "chalk": "^4.1.0",
     "common-tags": "^1.8.0",
     "minimist": "^1.2.5",
+    "ora": "^9.0.0",
     "shell-quote": "^1.7.2",
     "zero-fill": "^2.2.4"
   },
