feat: Add NetworkManager integration, shell completions, and complete test suite (v0.5.0)
- Add Linux NetworkManager detection and integration
  - Automatic detection of NetworkManager presence and running status
  - Check if interfaces are managed by NetworkManager
  - Warn users when MAC changes may be overwritten
  - Add --nm-reconnect flag for automatic device reconnection
  - Add --force flag for NetworkManager networking restart
  - Comprehensive error handling and timeout protection

- Add shell completions for bash, zsh, fish, and PowerShell
  - Tab completion for all commands and options
  - Interface name auto-completion
  - DUID subcommand completion
  - Installation command: spoofy completion

- Complete test suite
  - Comprehensive NetworkManager tests (test-networkmanager.js)
  - Enhanced DUID tests (test-duid.js)
  - Add npm test scripts (test:duid, test:nm, test:all)
  - Update README with testing documentation

- Update documentation
  - Add NetworkManager Integration section
  - Add Shell Completions section
  - Add Testing section
  - Update troubleshooting for Linux/NetworkManager

Minor version bump: 0.4.0 -> 0.5.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spoof-d",
   "description": "Cross-platform MAC address and DUID spoofing utility for macOS, Windows, and Linux",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "bin": {
     "spoofy": "bin/cmd.js"
   },
@@ -9,6 +9,7 @@
     "index.js",
     "bin/",
     "lib/",
+    "completions/",
     "LICENSE",
     "README.md",
     ".spoofyrc.example",
@@ -60,6 +61,9 @@
     "url": "git://github.com/TT5H/spoof-d.git"
   },
   "scripts": {
-    "test": "standard"
+    "test": "standard",
+    "test:duid": "node test/test-duid.js",
+    "test:nm": "node test/test-networkmanager.js",
+    "test:all": "npm run test:duid && npm run test:nm"
   }
 }
