chore: code quality improvements and metadata updates (v0.5.3)
- Add author and engines fields to package.json

- Pin standard devDependency to ^17.0.0 (was *)

- Remove duplicate network keyword from package.json

- Remove ~90 duplicate OUI entries in lib/oui.js (memory optimization)

- Replace busy-wait loops with Atomics.wait in retry functions

- Add Requirements section to README.md

- Improve history.js error handling with optional warnings

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "spoof-d",
   "description": "Cross-platform MAC address and DUID spoofing utility for macOS, Windows, and Linux",
-  "version": "0.5.2",
+  "version": "0.5.3",
+  "author": "TT5H",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "bin": {
     "spoofy": "bin/cmd.js"
   },
@@ -27,7 +31,7 @@
     "zero-fill": "^2.2.4"
   },
   "devDependencies": {
-    "standard": "*"
+    "standard": "^17.0.0"
   },
   "homepage": "https://github.com/TT5H/spoof-d",
   "keywords": [
@@ -51,7 +55,6 @@
     "windows",
     "linux",
     "cross-platform",
-    "network",
     "adapter"
   ],
   "license": "MIT",
